--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</div>
 			
 			<div id="footer">
-				Kubaty's website :D &copy; Wszelkie prawa zastrzerzone
+				Kubaty's website :D
 			</div>
 			
 		</div>
